--- a/myapp/pom.xml
+++ b/myapp/pom.xml
@@ -342,5 +342,6 @@
     <module>fixture</module>
     <module>objstore-jdo</module>
     <module>viewer-webapp</module>
+    <module>ProbandoMenu</module>
   </modules>
 </project>
