--- a/myapp/viewer-webapp/src/main/webapp/WEB-INF/isis.properties
+++ b/myapp/viewer-webapp/src/main/webapp/WEB-INF/isis.properties
@@ -162,7 +162,12 @@ isis.user-profile-store=in-memory
 #isis.services.prefix = 
 isis.services = objstore.jdo.todo.ToDoItemsJdo,\
                 fixture.todo.ToDoItemsFixturesService,\
-                dom.audit.AuditServiceDemo
+                dom.audit.AuditServiceDemo,\
+                org.myapp.ProbandoMenu.MenuNuevo
+                
+                
+                
+                
 
 
 
